tests/paczka1/small_fuzzy/86528866.err
Error in line 6: A655 A507 0,9
Error in line 10: NHaUIRCOwD A507 15,2
